Fix horizontal scrolling and button type

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -15,6 +15,12 @@
 
 @media screen and (max-width: 480px) {
   .footer__content {
-    margin: 48px 19px 36px;
+    padding: 48px 0 36px 19px;
+    font-family: Inter;
+    font-size: 14px;
+    line-height: 17px;
+    letter-spacing: 0;
+    text-align: left;
+    margin: 0;
   }
 }
