--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,6 +6,12 @@
 
 @media screen and (max-width: 480px) {
   .header {
-    margin: 28px 19px 0;
+    margin: 0;
+    padding: 28px 19px 32px;
+  }
+
+  .header__logo {
+    width: 126px;
+    height: 24px;
   }
 }
